--- a/references.bib
+++ b/references.bib
@@ -211,3 +211,45 @@
 	doi = {10.1201/9781315108230},
 	url = {http://dx.doi.org/10.1201/9781315108230}
 }
+
+@article{Craig-Schapiro2011,
+	title = {Multiplexed Immunoassay Panel Identifies Novel CSF Biomarkers for Alzheimer's Disease Diagnosis and Prognosis},
+	author = {Craig-Schapiro, Rebecca and Kuhn, Max and Xiong, Chengjie and Pickering, Eve H. and Liu, Jingxia and Misko, Thomas P. and Perrin, Richard J. and Bales, Kelly R. and Soares, Holly and Fagan, Anne M. and Holtzman, David M.},
+	editor = {Bush, Ashley I.},
+	year = {2011},
+	month = {04},
+	date = {2011-04-19},
+	journal = {PLoS ONE},
+	pages = {e18850},
+	volume = {6},
+	number = {4},
+	doi = {10.1371/journal.pone.0018850},
+	url = {http://dx.doi.org/10.1371/journal.pone.0018850},
+	langid = {en}
+}
+
+@article{Kim2009,
+	title = {The Role of Apolipoprotein E in Alzheimer's Disease},
+	author = {Kim, Jungsu and Basak, Jacob M. and Holtzman, David M.},
+	year = {2009},
+	month = {08},
+	date = {2009-08},
+	journal = {Neuron},
+	pages = {287--303},
+	volume = {63},
+	number = {3},
+	doi = {10.1016/j.neuron.2009.06.026},
+	url = {http://dx.doi.org/10.1016/j.neuron.2009.06.026},
+	langid = {en}
+}
+
+@book{hosmer2000,
+	title = {Applied Logistic Regression},
+	author = {Hosmer, David W. and Lemeshow, Stanley},
+	year = {2000},
+	month = {09},
+	date = {2000-09-13},
+	publisher = {John Wiley & Sons, Inc.},
+	doi = {10.1002/0471722146},
+	url = {http://dx.doi.org/10.1002/0471722146}
+}
