--- a/references.bib
+++ b/references.bib
@@ -253,3 +253,38 @@
 	doi = {10.1002/0471722146},
 	url = {http://dx.doi.org/10.1002/0471722146}
 }
+
+@article{xu2001,
+	title = {Monte Carlo cross validation},
+	author = {Xu, Qing-Song and Liang, Yi-Zeng},
+	year = {2001},
+	month = {04},
+	date = {2001-04},
+	journal = {Chemometrics and Intelligent Laboratory Systems},
+	pages = {1--11},
+	volume = {56},
+	number = {1},
+	doi = {10.1016/s0169-7439(00)00122-2},
+	url = {http://dx.doi.org/10.1016/s0169-7439(00)00122-2},
+	langid = {en}
+}
+
+@article{davison1997,
+	title = {Bootstrap Methods and their Application},
+	author = {Davison, A. C. and Hinkley, D. V.},
+	year = {1997},
+	month = {10},
+	date = {1997-10-28},
+	doi = {10.1017/cbo9780511802843},
+	url = {http://dx.doi.org/10.1017/cbo9780511802843}
+}
+
+@book{hyndman,
+title = "Forecasting: Principles and Practice",
+author = "Hyndman, {Robin John} and George Athanasopoulos",
+year = "2018",
+language = "English",
+publisher = "OTexts",
+address = "Australia",
+edition = "2nd",
+}
