--- a/references.bib
+++ b/references.bib
@@ -288,3 +288,15 @@ publisher = "OTexts",
 address = "Australia",
 edition = "2nd",
 }
+@article{schmidberger2009,
+	title = {State of the Art in Parallel Computing with{\emph{R}}},
+	author = {Schmidberger, Markus and Morgan, Martin and Eddelbuettel, Dirk and Yu, Hao and Tierney, Luke and Mansmann, Ulrich},
+	year = {2009},
+	date = {2009},
+	journal = {Journal of Statistical Software},
+	volume = {31},
+	number = {1},
+	doi = {10.18637/jss.v031.i01},
+	url = {http://dx.doi.org/10.18637/jss.v031.i01},
+	langid = {en}
+}
