--- a/resampling2.qmd
+++ b/resampling2.qmd
@@ -15,29 +15,30 @@ Oprócz modelu liniowego zbudujemy również las losowy, który jest bardzo elas
 ::: {#exm-1}
 ```{r}
 library(tidymodels)
+tidymodels_prefer()
 
 set.seed(44)
-ames <- ames %>% mutate(Sale_Price = log10(Sale_Price))
+ames <- ames |>mutate(Sale_Price = log10(Sale_Price))
 ames_split <- initial_split(ames, prop = 0.80, strata = Sale_Price)
 ames_train <- training(ames_split)
 ames_test  <-  testing(ames_split)
 
 lm_model <- 
-  linear_reg() %>% 
+  linear_reg() |>
   set_engine("lm")
 
 ames_rec <- 
   recipe(Sale_Price ~ Neighborhood + Gr_Liv_Area + Year_Built + Bldg_Type + 
            Latitude + Longitude, data = ames_train) %>%
-  step_log(Gr_Liv_Area, base = 10) %>% 
-  step_other(Neighborhood, threshold = 0.01, id = "my_id") %>% 
-  step_dummy(all_nominal_predictors()) %>% 
-  step_interact( ~ Gr_Liv_Area:starts_with("Bldg_Type_") ) %>% 
+  step_log(Gr_Liv_Area, base = 10) |>
+  step_other(Neighborhood, threshold = 0.01, id = "my_id") |>
+  step_dummy(all_nominal_predictors()) |>
+  step_interact( ~ Gr_Liv_Area:starts_with("Bldg_Type_") ) |>
   step_ns(Latitude, Longitude, deg_free = 20)
 
 lm_wflow <- 
-  workflow() %>% 
-  add_model(lm_model) %>% 
+  workflow() |>
+  add_model(lm_model) |>
   add_recipe(ames_rec)
 
 lm_fit <- fit(lm_wflow, ames_train)
@@ -90,6 +91,10 @@ Na podstawie powyższych wyników można by wyciągnąć wniosek, że model lasu
 W taką pułapkę łapie się większość osób stawiających pierwsze kroki w ML.
 Ale już porównując te modele na próbie testowej widzimy, że różnice pomiędzy modelami się zacierają.
 
+::: column-margin
+![](images/chap_46.png){width="400"}
+:::
+
 ```{r}
 estimate_perf(rf_fit, ames_test)
 estimate_perf(lm_fit, ames_test)
@@ -108,6 +113,10 @@ Zawsze będzie zapewniał doskonałe przewidywania dla zestawu treningowego, nie
 Modele losowego lasu są podobne; predykcja na zbiorze uczącym zawsze spowoduje nieprawdziwie optymistyczne oszacowanie wydajności.
 
 Brak znaczących różnic w dopasowaniu modelu regresji na obu zbiorach wynika z małej złożoności modelu, a co za tym idzie niskiej wariancji modelu.
+:::
+
+::: column-margin
+![](images/chap_38.png){fig-align="center" width="400"}
 :::
 
 Powyższy przykład pokazuje, że ocena modeli na zbiorze uczącym nie jest właściwym podejściem, ponieważ może zwrócić fałszywie optymistyczne dopasowanie.
@@ -137,6 +146,10 @@ Oznacza to, że 20 oddzielnych modeli jest dopasowywanych do zbiorów analiz, a 
 Ostateczne oszacowanie wydajności dla modelu jest średnią z 20 powtórzeń statystyki.
 Średnia ta ma bardzo dobre właściwości uogólniające i jest znacznie lepsza niż szacunki na zbiorze uczącym.
 
+::: column-margin
+![](https://i.pinimg.com/564x/5d/40/fe/5d40febb383da04ada236afede0ab996.jpg){fig-align="center" width="400"}
+:::
+
 ## Walidacja krzyżowa
 
 Walidacja krzyżowa (ang. *cross-validation*) jest dobrze ugruntowaną metodą próbkowania.
@@ -157,6 +170,10 @@ Proces ten jest kontynuowany dla każdego folda, tak że trzy modele dają trzy 
 
 Gdy $V = 3$, zbiory analiz stanowią 2/3 zbioru treningowego, a każdy zbiór oceny stanowi odrębną 1/3.
 Końcowa estymacja resamplingu wydajności uśrednia każdą z $V$ replik.
+
+::: column-margin
+![](images/chap_11.png){fig-align="center" width="400"}
+:::
 
 Użycie $V = 3$ jest dobrym wyborem do zilustrowania walidacji krzyżowej, ale jest to zły wybór w praktyce, ponieważ jest zbyt mało foldów, aby wygenerować wiarygodne szacunki.
 W praktyce wartości $V$ to najczęściej 5 lub 10; raczej preferujemy 10-krotną walidację krzyżową jako domyślną, ponieważ jest ona wystarczająco duża, aby uzyskać dobre wyniki w większości sytuacji.
@@ -185,6 +202,10 @@ W zależności od rozmiaru danych i innych cech, ocena modelu uzyskana w wyniku 
 Podobnie jak w przypadku wielu problemów statystycznych, jednym ze sposobów zmniejszenia szumu jest zebranie większej ilości danych.
 W przypadku walidacji krzyżowej oznacza to uśrednienie więcej niż $V$ statystyk.
 
+::: column-margin
+![](images/chap_20.png){fig-align="center" width="400"}
+:::
+
 Aby stworzyć $R$ powtórzeń $V$-krotnej walidacji krzyżowej, ten sam proces generowania foldów jest wykonywany $R$ razy, aby wygenerować $R$ zbiorów złożonych z $V$ podzbiorów.
 Zamiast uśredniania $V$ statystyk, $V\times R$ wartości daje ostateczną estymację resamplingu.
 Ze względu na Centralne Twierdzenie Graniczne, statystyki zbiorcze z każdego modelu mają tendencję do rozkładu normalnego, tak długo jak mamy dużo danych w stosunku do $V\times R$.
@@ -209,6 +230,10 @@ Jedną z odmian walidacji krzyżowej jest walidacja krzyżowa typu *Leave-One-Ou
 Jeśli mamy $n$ próbek zbioru treningowego, $n$ modeli jest dopasowywanych przy użyciu $n - 1$ wierszy zbioru treningowego.
 Każdy model przewiduje pojedynczy wykluczony punkt danych.
 Na koniec próbkowania $n$ prognoz jest łączonych w celu uzyskania pojedynczej statystyki dopasowania
+
+::: column-margin
+![](images/chap_41.png){fig-align="center" width="400"}
+:::
 
 Metody LOO są niedoskonałe w porównaniu z prawie każdą inną metodą.
 Dla wszystkich oprócz patologicznie małych próbek, LOO jest obliczeniowo złożony i może nie mieć dobrych właściwości statystycznych.
@@ -296,3 +321,236 @@ Istnieją dwie różne konfiguracje tej metody:
 
 -   Zestaw analiz może narastać narastająco (w przeciwieństwie do utrzymywania tego samego rozmiaru). Po pierwszym początkowym zestawie analitycznym nowe próbki mogą narastać bez odrzucania wcześniejszych danych.
 -   Próbki nie muszą być zwiększane o jeden. Na przykład, w przypadku dużych zestawów danych, blok przyrostowy może wynosić tydzień lub miesiąc zamiast dnia.
+
+## Oszacowanie dopasowania z wykorzystaniem resamplingu
+
+Każda z metod resamplingu omówionych w tym rozdziale może być wykorzystana do oceny procesu modelowania (w tym przetwarzania wstępnego, dopasowania modelu itp.).
+Metody te są skuteczne, ponieważ do trenowania modelu i oceny modelu wykorzystywane są różne grupy danych.
+Przebiega on w następujący sposób:
+
+1.  Podczas resamplingu zbiór analityczny jest używany do wstępnego przetwarzania danych a następnie przetworzonych danych używa do dopasowania modelu.
+2.  Statystyki przetwarzania wstępnego opracowane przez zbiór analiz są stosowane do zbioru oceny. Prognozy ze zbioru oceny wskazują wydajność modelu na nowych danych.
+
+Ta sekwencja powtarza się dla każdej próby.
+Jeśli istnieje $B$ prób, wówczas mamy $B$ powtórzeń każdej z metryk dopasowania.
+Ostateczna ocena jest średnią tych $B$ statystyk.
+Jeśli $B = 1$, jak w przypadku zbioru walidacyjnego, pojedyncze statystyki reprezentują ogólne dopasowanie.
+
+::: column-margin
+![](https://media4.giphy.com/media/IfFN6NwhaUl3CI4mgG/giphy.gif?cid=ecf05e479vdinrjf0nel53vw654p1yc1bgr3ey8fkbw1o74t&rid=giphy.gif&ct=g)
+:::
+
+```{r}
+#| cache: true
+# ustawiamy kontrolę resamplingu w ten sposbów aby zapisać predykcje i 
+# nauczony przepływ - domyślnie nie są zapisywane
+keep_pred <- control_resamples(save_pred = TRUE, save_workflow = TRUE)
+
+set.seed(1003)
+rf_res <- 
+  rf_wflow |>
+  fit_resamples(resamples = ames_folds, control = keep_pred)
+rf_res
+```
+
+Chociaż te kolumny listy mogą wyglądać zniechęcająco, można je łatwo przekonfigurować za pomocą `tidymodels`.
+Na przykład, aby zwrócić metryki wydajności w bardziej użytecznym formacie:
+
+```{r}
+collect_metrics(rf_res)
+```
+
+Aby uzyskać metryki dla każdej próby, należy użyć opcji `summarize = FALSE`.
+Natomiast aby uzyskać predykcje z poszczególnych foldów użyjemy:
+
+```{r}
+assess_res <- collect_predictions(rf_res)
+assess_res
+```
+
+Kolumna `.row` jest liczbą całkowitą, która odpowiada numerowi wiersza oryginalnego zestawu treningowego, tak aby te wyniki mogły być odpowiednio połączone z oryginalnymi danymi.
+
+::: callout-tip
+Dla niektórych metod resamplingu, takich jak bootstrap lub walidacja krzyżowa z powtórzeniami, otrzymamy wiele predykcji na wiersz oryginalnego zestawu treningowego.
+Aby uzyskać jedną statystykę (średnią z predykcji) użyj `collect_predictions(object, summarize = TRUE)`.
+:::
+
+```{r}
+#| label: fig-pred-obs
+#| fig-cap: Porównanie predykcji z modelu z obserwowanymi wartościami na podstawie wyników resamplingu
+assess_res |>
+  ggplot(aes(x = Sale_Price, y = .pred)) + 
+  geom_point(alpha = .15) +
+  geom_abline(color = "red") + 
+  coord_obs_pred() + 
+  ylab("Predicted")
+```
+
+W zbiorze treningowym znajdują się dwa domy o niskiej zaobserwowanej cenie sprzedaży, których cena jest znacznie zawyżona przez model.
+Które to domy?
+Dowiedzmy się tego z wyniku `assess_res`:
+
+```{r}
+over_predicted <- 
+  assess_res |> 
+  mutate(residual = Sale_Price - .pred) |>
+  arrange(desc(abs(residual))) |>
+  slice(1:2)
+over_predicted
+
+ames_train |>
+  slice(over_predicted$.row) |>
+  select(Gr_Liv_Area, Neighborhood, Year_Built, Bedroom_AbvGr, Full_Bath)
+```
+
+Identyfikacja takich przykładów ze szczególnie słabym dopasowaniem może pomóc nam śledzić i badać, dlaczego te konkretne przewidywania są tak słabe.
+
+Jeśli chcielibyśmy użyć zbioru walidacyjnego do oceny modelu, użyjemy:
+
+```{r}
+val_res <- rf_wflow |> 
+  fit_resamples(resamples = val_set)
+val_res
+
+collect_metrics(val_res)
+```
+
+Jak widać wyniki te są zbliżone do otrzymanych z wykorzystaniem próby testowej.
+
+## Przetwarzanie równoległe
+
+Modele utworzone podczas ponownego próbkowania są niezależne od siebie.
+Obliczenia tego typu są czasami nazywane żenująco równoległymi (ang. *embarrassingly parallel*); każdy model mógłby być dopasowany jednocześnie bez problemów [@schmidberger2009].
+Pakiet `tune` używa pakietu `foreach` do przeprowadzenia obliczeń równoległych.
+Obliczenia te mogą być podzielone pomiędzy procesory na tym samym komputerze lub na różnych komputerach, w zależności od wybranej technologii.
+
+Liczbę dostępnych rdzeni można wykryć za pomocą:
+
+```{r}
+#| evel: false
+# Liczba fizycznych rdzeni
+parallel::detectCores(logical = FALSE)
+
+
+# liczba logicznych rdzeni  
+parallel::detectCores(logical = TRUE)
+```
+
+Różnica między tymi dwoma wartościami jest związana z procesorem komputera.
+Na przykład większość procesorów Intela wykorzystuje hyperthreading[^resampling2-2], który tworzy dwa wirtualne rdzenie dla każdego fizycznego rdzenia.
+Dodatkowe zasoby mogą poprawić wydajność, jednak rzadko można je stosować na wszystkich rdzeniach fizycznych, ponieważ pewne zasoby są potrzebne do obsługi hyperthreadingu.
+
+[^resampling2-2]: wielowątkowość współbierzna
+
+W przypadku `fit_resamples()` i innych funkcji w pakiecie `tune`, przetwarzanie równoległe występuje, gdy użytkownik zarejestruje pakiet równoległego przetwarzania.
+Owe pakiety definiują sposób wykonywania przetwarzania równoległego.
+W systemach operacyjnych Unix i macOS jedną z metod podziału obliczeń jest rozgałęzienie wątków.
+Aby to umożliwić, załaduj pakiet `doMC` i zarejestruj liczbę równoległych rdzeni dla `foreach`:
+
+```{r}
+#| eval: false
+# tylko w Unix i macOS
+library(doMC)
+registerDoMC(cores = 4)
+```
+
+To daje instrukcje dla `fit_resamples()`, aby uruchomić 1/4 obliczeń na każdym z czterech rdzeni.
+Aby zresetować obliczenia do przetwarzania sekwencyjnego:
+
+```{r}
+#| eval: false
+registerDoSEQ()
+```
+
+Alternatywnie, inne podejście do paralelizacji obliczeń wykorzystuje gniazda sieciowe.
+Pakiet `doParallel` umożliwia tę metodę (możliwą do wykorzystania przez wszystkie systemy operacyjne):
+
+```{r}
+#| eval: false
+library(doParallel)
+
+cl <- makePSOCKcluster(4)
+registerDoParallel(cl)
+
+# fit_resamples()...
+
+stopCluster(cl)
+```
+
+Jeszcze innym pakietem R, który ułatwia przetwarzanie równoległe, jest pakiet `future`.
+Podobnie jak `foreach`, zapewnia on wykonywanie równoległych obliczeń na wybranej liczbie rdzeni.
+Pakiet ten jest używany w połączeniu z `foreach` poprzez pakiet `doFuture`.
+
+Przetwarzanie równoległe z pakietem `tune` ma tendencję do zapewnienia liniowego przyspieszenia dla pierwszych kilku rdzeni.
+Oznacza to, że przy dwóch rdzeniach obliczenia są dwukrotnie szybsze.
+W zależności od typu danych i modelu, wzrost prędkości spada, tak że po włączeniu czterech czy pięciu rdzeni prędkość nie wzrośnie 4- czy 5-krotnie.
+Użycie większej liczby rdzeni nadal będzie skracać czas potrzebny do wykonania zadania; po prostu ich efektywność spada wraz z włączeniem dodatkowych rdzeni.
+
+Zakończmy ostatnią uwagą na temat obliczeń równoległych.
+Dla każdej z tych technologii, wymagania dotyczące pamięci wzrastają z każdym dodatkowym rdzeniem.
+Na przykład, jeśli bieżący zestaw danych zajmuje 2 GB pamięci i używane są trzy rdzenie, całkowite zapotrzebowanie na pamięć wyniesie 8 GB (2 dla każdego procesu roboczego plus oryginał).
+Użycie zbyt wielu rdzeni może spowodować znaczne spowolnienie obliczeń (i komputera).
+
+## Przechowywanie wyników resamplingu
+
+Modele utworzone podczas próbkowania nie są zapisywane.
+Modele te są trenowane w celu oceny dopasowania i zazwyczaj nie potrzebujemy ich po obliczeniu miar dopasowania.
+Jeśli określone podejście do modelowania okaże się najlepszą opcją dla naszego zestawu danych, wtedy najlepszym wyborem jest ponowne dopasowanie modelu do całego zestawu uczącego, aby parametry modelu mogły być oszacowane przy użyciu większej ilości danych.
+
+Podczas gdy te modele utworzone podczas resamplingu nie są zachowywane, istnieje metoda na zapisanie ich lub części składników.
+Opcja `extract` funkcji `control_resamples()` określa funkcję, która przyjmuje pojedynczy argument; my użyjemy `x`.
+Gdy zostanie wykonana, `x` przekazuje w wyniku dopasowany obiekt przepływu, niezależnie od tego, czy przekazałeś `fit_resamples()` z przepływem.
+Przypomnijmy, że pakiet `workflows` posiada funkcje, które mogą wyciągać różne składniki obiektów (np. model, recepturę itp.).
+
+```{r}
+ames_rec <- 
+  recipe(Sale_Price ~ Neighborhood + Gr_Liv_Area + Year_Built + Bldg_Type + 
+           Latitude + Longitude, data = ames_train) %>%
+  step_other(Neighborhood, threshold = 0.01) |>
+  step_dummy(all_nominal_predictors()) |>
+  step_interact( ~ Gr_Liv_Area:starts_with("Bldg_Type_") ) |>
+  step_ns(Latitude, Longitude, deg_free = 20)
+
+lm_wflow <-  
+  workflow() |>
+  add_recipe(ames_rec) |>
+  add_model(linear_reg() |>set_engine("lm")) 
+
+lm_fit <- lm_wflow |> 
+  fit(data = ames_train)
+
+# wyciągnijmy przepis
+extract_recipe(lm_fit, estimated = TRUE)
+
+# wyciągnijmy model
+get_model <- function(x) {
+  extract_fit_parsnip(x) |> 
+    tidy()
+}
+
+# tak działa na pojedynczym modelu
+get_model(lm_fit)
+
+# a tak na wyniku resamplingu
+ctrl <- control_resamples(extract = get_model)
+
+lm_res <- lm_wflow |> 
+  fit_resamples(resamples = ames_folds, control = ctrl)
+lm_res
+```
+
+Teraz z każdego folda możemy wyciągnąć szczegóły modelu.
+
+```{r}
+lm_res$.extracts[[1]][[1]]
+```
+
+Może się to wydawać zawiłą metodą zapisywania wyników modelu.
+Jednakże, `extract` jest elastyczna i nie zakłada, że użytkownik będzie zapisywał tylko jedną `tibble` dla każdej próbki.
+Na przykład, metoda `tidy()` może być uruchomiona zarówno na przepisie jak i na modelu.
+W tym przypadku zwrócona zostanie lista dwóch `tibble`.
+
+```{r}
+all_coef <- map_dfr(lm_res$.extracts, ~ .x[[1]][[1]])
+filter(all_coef, term == "Year_Built")
+```
