tune zrobione do overfitting

--- a/references.bib
+++ b/references.bib
@@ -300,3 +300,25 @@ edition = "2nd",
 	url = {http://dx.doi.org/10.18637/jss.v031.i01},
 	langid = {en}
 }
+
+@article{friedman2001,
+	title = {Greedy function approximation: A gradient boosting machine.},
+	author = {Friedman, Jerome H.},
+	year = {2001},
+	month = {10},
+	date = {2001-10-01},
+	journal = {The Annals of Statistics},
+	volume = {29},
+	number = {5},
+	doi = {10.1214/aos/1013203451},
+	url = {http://dx.doi.org/10.1214/aos/1013203451}
+}
+
+@article{Thomas2020,
+	title = {The Problem with Metrics is a Fundamental Problem for AI},
+	author = {Thomas, Rachel and Uminsky, David},
+	year = {2020},
+	date = {2020},
+	doi = {10.48550/ARXIV.2002.08512},
+	url = {https://arxiv.org/abs/2002.08512}
+}
