dodałem grid_search

--- a/references.bib
+++ b/references.bib
@@ -322,3 +322,76 @@ edition = "2nd",
 	doi = {10.48550/ARXIV.2002.08512},
 	url = {https://arxiv.org/abs/2002.08512}
 }
+
+@article{booth1979,
+	title = {Statistics for Experimenters: An Introduction to Design, Data Analysis, and Model Building.},
+	author = {Booth, Gordon D. and Box, George E. P. and Hunter, William G. and Hunter, J. Stuart},
+	year = {1979},
+	month = {09},
+	date = {1979-09},
+	journal = {Journal of the American Statistical Association},
+	pages = {731},
+	volume = {74},
+	number = {367},
+	doi = {10.2307/2287009},
+	url = {http://dx.doi.org/10.2307/2287009}
+}
+
+@article{mckay1979,
+	title = {A Comparison of Three Methods for Selecting Values of Input Variables in the Analysis of Output from a Computer Code},
+	author = {McKay, M. D. and Beckman, R. J. and Conover, W. J.},
+	year = {1979},
+	month = {05},
+	date = {1979-05},
+	journal = {Technometrics},
+	pages = {239},
+	volume = {21},
+	number = {2},
+	doi = {10.2307/1268522},
+	url = {http://dx.doi.org/10.2307/1268522}
+}
+
+@article{shewryMaximumEntropySampling1987a,
+  title = {Maximum Entropy Sampling},
+  author = {Shewry, M. C. and Wynn, H. P.},
+  year = {1987},
+  month = jan,
+  journal = {Journal of Applied Statistics},
+  volume = {14},
+  number = {2},
+  pages = {165--170},
+  publisher = {{Taylor \& Francis}},
+  issn = {0266-4763},
+  doi = {10.1080/02664768700000020},
+  annotation = {\_eprint: https://doi.org/10.1080/02664768700000020}
+}
+
+
+@article{joseph2015,
+	title = {Maximum projection designs for computer experiments},
+	author = {Joseph, V. Roshan and Gul, Evren and Ba, Shan},
+	year = {2015},
+	month = {03},
+	date = {2015-03-18},
+	journal = {Biometrika},
+	pages = {371--380},
+	volume = {102},
+	number = {2},
+	doi = {10.1093/biomet/asv002},
+	url = {http://dx.doi.org/10.1093/biomet/asv002},
+	langid = {en}
+}
+
+@article{Hill2007,
+	title = {Impact of image segmentation on high-content screening data quality for SK-BR-3 cells},
+	author = {Hill, Andrew A and LaPan, Peter and Li, Yizheng and Haney, Steve},
+	year = {2007},
+	month = {09},
+	date = {2007-09-14},
+	journal = {BMC Bioinformatics},
+	volume = {8},
+	number = {1},
+	doi = {10.1186/1471-2105-8-340},
+	url = {http://dx.doi.org/10.1186/1471-2105-8-340},
+	langid = {en}
+}
