--- a/references.bib
+++ b/references.bib
@@ -395,3 +395,14 @@ edition = "2nd",
 	url = {http://dx.doi.org/10.1186/1471-2105-8-340},
 	langid = {en}
 }
+
+@inproceedings{NIPS1993_02a32ad2,
+  title = {Hoeffding Races: {{Accelerating}} Model Selection Search for Classification and Function Approximation},
+  booktitle = {Advances in Neural Information Processing Systems},
+  author = {Maron, Oded and Moore, Andrew},
+  editor = {Cowan, J. and Tesauro, G. and Alspector, J.},
+  year = {1993},
+  volume = {6},
+  publisher = {{Morgan-Kaufmann}}
+}
+
