add iterative search

--- a/references.bib
+++ b/references.bib
@@ -406,3 +406,35 @@ edition = "2nd",
   publisher = {{Morgan-Kaufmann}}
 }
 
+
+@article{shahriari2016,
+	title = {Taking the Human Out of the Loop: A Review of Bayesian Optimization},
+	author = {Shahriari, Bobak and Swersky, Kevin and Wang, Ziyu and Adams, Ryan P. and de Freitas, Nando},
+	year = {2016},
+	month = {01},
+	date = {2016-01},
+	journal = {Proceedings of the IEEE},
+	pages = {148--175},
+	volume = {104},
+	number = {1},
+	doi = {10.1109/jproc.2015.2494218},
+	url = {http://dx.doi.org/10.1109/jproc.2015.2494218}
+}
+
+@article{Frazier2018,
+	title = {A Tutorial on Bayesian Optimization},
+	author = {Frazier, Peter I.},
+	year = {2018},
+	date = {2018},
+	doi = {10.48550/ARXIV.1807.02811},
+	url = {https://arxiv.org/abs/1807.02811}
+}
+
+@misc{schulz2016,
+	title = {A tutorial on Gaussian process regression: Modelling, exploring, and exploiting functions},
+	author = {Schulz, Eric and Speekenbrink, Maarten and Krause, Andreas},
+	year = {2016},
+	month = {12},
+	date = {2016-12-19},
+	url = {http://dx.doi.org/10.1101/095190}
+}
