--- a/references.bib
+++ b/references.bib
@@ -438,3 +438,71 @@ edition = "2nd",
 	date = {2016-12-19},
 	url = {http://dx.doi.org/10.1101/095190}
 }
+
+@article{
+  kirkpatrickOptimizationSimulatedAnnealing1983,
+  title={Optimization by Simulated Annealing},
+  volume={220},
+  url={https://www.science.org/doi/abs/10.1126/science.220.4598.671},
+  DOI={10.1126/science.220.4598.671},
+  number={4598},
+  journal={Science},
+  publisher={American},
+  author={Kirkpatrick, S. and Gelatt, C. D. and Vecchi, M. P.},
+  year={1983},
+  month={May},
+pages={671–680} }
+
+@article{
+  kirkpatrickOptimizationSimulatedAnnealing1983,
+  title={Optimization by Simulated Annealing},
+  volume={220},
+  url={https://www.science.org/doi/abs/10.1126/science.220.4598.671},
+  DOI={10.1126/science.220.4598.671},
+  number={4598},
+  journal={Science},
+  publisher={American},
+  author={Kirkpatrick, S. and Gelatt, C. D. and Vecchi, M. P.},
+  year={1983},
+  month={May},
+pages={671–680} }
+
+@article{
+  kirkpatrickOptimizationSimulatedAnnealing1983,
+  title={Optimization by Simulated Annealing},
+  volume={220},
+  url={https://www.science.org/doi/abs/10.1126/science.220.4598.671},
+  DOI={10.1126/science.220.4598.671},
+  number={4598},
+  journal={Science},
+  publisher={American},
+  author={Kirkpatrick, S. and Gelatt, C. D. and Vecchi, M. P.},
+  year={1983},
+  month={May},
+pages={671–680} }
+
+@inbook{vanlaarhoven1987,
+	title = {Simulated annealing},
+	author = {van Laarhoven, Peter J. M. and Aarts, Emile H. L.},
+	year = {1987},
+	date = {1987},
+	publisher = {Springer Netherlands},
+	pages = {7--15},
+	doi = {10.1007/978-94-015-7744-1_2},
+	url = {http://dx.doi.org/10.1007/978-94-015-7744-1_2}
+}
+
+@article{bohachevsky1986,
+	title = {Generalized Simulated Annealing for Function Optimization},
+	author = {Bohachevsky, Ihor O. and Johnson, Mark E. and Stein, Myron L.},
+	year = {1986},
+	month = {08},
+	date = {1986-08},
+	journal = {Technometrics},
+	pages = {209--217},
+	volume = {28},
+	number = {3},
+	doi = {10.1080/00401706.1986.10488128},
+	url = {http://dx.doi.org/10.1080/00401706.1986.10488128},
+	langid = {en}
+}
