--- a/iterative.qmd
+++ b/iterative.qmd
@@ -22,6 +22,7 @@ Obiekty `tidymodels`: `svm_rec`, `svm_spec` i `svm_wflow` definiują proces twor
 
 ```{r}
 library(tidymodels)
+library(finetune)
 tidymodels_prefer()
 
 data(cells)
@@ -81,7 +82,6 @@ W tym celu poniższy kod tworzy małą regularną siatkę, która znajduje się 
 Funkcja `tune_grid()` dokonuje próbkowania tej siatki:
 
 ```{r}
-#| cache: true
 roc_res <- metric_set(roc_auc)
 
 set.seed(1401)
@@ -92,12 +92,24 @@ start_grid <-
     rbf_sigma = rbf_sigma(c(-6, -4))
   ) %>% 
   grid_regular(levels = 2)
+```
+
+```{r}
+#| eval: false
 
 set.seed(1402)
 svm_initial <- 
   svm_wflow %>% 
   tune_grid(resamples = cell_folds, grid = start_grid, metrics = roc_res)
+```
 
+```{r}
+#| echo: false
+
+load("models/svm_initial.rda")
+```
+
+```{r}
 collect_metrics(svm_initial)
 ```
 
@@ -179,7 +191,8 @@ Prawdziwa funkcja jest pokazana na @fig-iter2 wraz z pięcioma wartościami kand
 
 ![Hipotetyczny rzeczywisty profil wydajności dla arbitralnie wybranego parametru dostrajania, z pięcioma szacowanymi punktami](images/Zrzut%20ekranu%202023-03-9%20o%2022.39.44.png){#fig-iter2 fig-align="center" width="600"}
 
-Dla tych danych dopasowanie modelu GP przedstawiono na @fig-iter3. Zacieniowany obszar wskazuje średnią $\pm$ 1 błąd standardowy.
+Dla tych danych dopasowanie modelu GP przedstawiono na @fig-iter3.
+Zacieniowany obszar wskazuje średnią $\pm$ 1 błąd standardowy.
 Dwie pionowe linie wskazują dwa punkty kandydujące, które są później bardziej szczegółowo badane.
 Zacieniowany obszar ufności pokazuje funkcję wykładniczej wariancji kwadratowej; staje się ona bardzo duża między punktami i zbiega do zera w istniejących punktach danych.
 
@@ -198,11 +211,13 @@ Jedną z najczęściej stosowanych funkcji akwizycji jest oczekiwana poprawa.
 Pojęcie poprawy wymaga wartości dla bieżących najlepszych wyników (w przeciwieństwie do podejścia opartego na przedziałach ufności).
 Ponieważ GP może opisać nowy punkt kandydacki za pomocą rozkładu, możemy ważyć fragmenty rozkładu, które wykazują poprawę, używając prawdopodobieństwa wystąpienia poprawy.
 
-Na przykład, rozważmy dwie wartości parametrów kandydujących 0,10 i 0,25 (wskazane przez pionowe linie na @fig-iter3). Używając dopasowanego modelu GP, ich przewidywane $R^2$ są pokazane na rysunku 14.4 wraz z linią odniesienia dla aktualnych najlepszych wyników.
+Na przykład, rozważmy dwie wartości parametrów kandydujących 0,10 i 0,25 (wskazane przez pionowe linie na @fig-iter3).
+Używając dopasowanego modelu GP, ich przewidywane $R^2$ są pokazane na rysunku 14.4 wraz z linią odniesienia dla aktualnych najlepszych wyników.
 
 ![Przewidywane rozkłady wydajności dla dwóch próbkowanych wartości parametrów dostrajania](images/Zrzut%20ekranu%202023-03-9%20o%2022.57.54.png){#fig-iter4 fig-align="center" width="600"}
 
-Rozpatrując tylko średnią $R^2$ lepszym wyborem jest wartość parametru 0,10 (patrz @tbl-1). Rekomendacja parametru dostrajania dla 0,25 ma gorsze przewidywanie średnie niż aktualny najlepszy kandydat.
+Rozpatrując tylko średnią $R^2$ lepszym wyborem jest wartość parametru 0,10 (patrz @tbl-1).
+Rekomendacja parametru dostrajania dla 0,25 ma gorsze przewidywanie średnie niż aktualny najlepszy kandydat.
 Jednakże, ponieważ ma wyższą wariancję, ma większy ogólny obszar prawdopodobieństwa powyżej aktualnego najlepszego.
 W rezultacie ma większą oczekiwaną poprawę:
 
@@ -241,7 +256,7 @@ Użyjmy pierwszych wyników SVM jako początkowego podłoża dla modelu GP.
 Przypomnijmy, że w tym zastosowaniu chcemy zmaksymalizować obszar pod krzywą ROC.
 
 ```{r}
-# cache: true
+#| eval: false
 ctrl <- control_bayes(verbose = TRUE)
 
 set.seed(1403)
@@ -258,16 +273,27 @@ svm_bo <-
 ```
 
 ```{r}
+#| echo: false
+load("models/svm_bo.rda")
+```
+
+```{r}
+#| label: tbl-bo1
+#| tbl-cap: Przebieg optymalizacji baysowskiej
 collect_metrics(svm_bo) |> 
   gt()
 ```
 
 ```{r}
+#| label: tbl-bo2
+#| tbl-cap: Zestaw optymalnych parametrów na podstawie OB
 show_best(svm_bo) |> 
   gt()
 ```
 
 ```{r}
+#| label: fig-bo1
+#| fig-cap: Jakość dopasowania modelu w poszczególnych iteracjach OB
 autoplot(svm_bo, type = "performance")
 ```
 
@@ -286,3 +312,154 @@ W ciągu pierwszych dziesięciu iteracji, wyszukiwanie jest dokonywane w pobliż
 Podczas gdy najlepsza kombinacja dostrajania parametrów znajduje się na granicy przestrzeni parametrów, optymalizacja bayesowska często wybierze nowe punkty poza granicami przestrzeni parametrów.
 
 Powyższy przykład startował z punktów startowych wybranych nieco arbitralnie ale nieco lepsze wyniki można osiągnąć stosując losowe wypełnienie przestrzeni parametrów.
+
+## Symulowane wyżarzanie
+
+Symulowane wyżarzanie (ang. *simulated annealing*) [@kirkpatrickOptimizationSimulatedAnnealing1983; @vanlaarhoven1987]; jest nieliniową procedurą wyszukiwania zainspirowaną procesem stygnięcia metalu.
+Jest to metoda globalnego wyszukiwania, która może efektywnie poruszać się po wielu różnych obszarach poszukiwań, w tym po funkcjach nieciągłych.
+W przeciwieństwie do większości procedur optymalizacji opartych na gradiencie, symulowane wyżarzanie może ponownie ocenić poprzednie rozwiązania.
+
+Proces użycia symulowanego wyżarzania rozpoczyna się od wartości początkowej i rozpoczyna kontrolowany losowy spacer przez przestrzeń parametrów.
+Każda nowa wartość parametru-kandydata jest niewielką perturbacją poprzedniej wartości, która utrzymuje nowy punkt w lokalnym sąsiedztwie.
+
+Punkt kandydujący jest oceniana przy zastosowaniu resamplingu, aby uzyskać odpowiadającą mu wartość wydajności.
+Jeśli osiąga ona lepsze wyniki niż poprzednie parametry, jest akceptowana jako nowa najlepsza i proces jest kontynuowany.
+Jeśli wyniki są gorsze niż poprzednia wartość, procedura wyszukiwania może nadal używać tego parametru do określenia dalszych kroków.
+Zależy to od dwóch czynników.
+Po pierwsze, prawdopodobieństwo zatrzymania złego kandydata maleje wraz z pogorszeniem się wyników.
+Innymi słowy, tylko nieco gorszy wynik od obecnie najlepszego ma większą szansę na akceptację niż ten z dużym spadkiem wydajności.
+Drugim czynnikiem jest liczba iteracji wyszukiwania.
+Symulowane wyżarzanie próbuje zaakceptować mniej suboptymalnych wartości w miarę postępu wyszukiwania.
+Z tych dwóch czynników prawdopodobieństwo akceptacji złego wyniku można sformalizować jako:
+
+$$
+\operatorname{Pr}[\text{accept suboptimal parameters at iteration } i] = \exp(c\times D_i \times i)
+$$ {#eq-simulated-annealing}
+
+gdzie $i$ jest numerem iteracji, $c$ jest stałą określoną przez użytkownika, $D_i$ jest procentową różnicą pomiędzy starą i nową wartością (gdzie wartości ujemne oznaczają gorsze wyniki).
+Dla złego wyniku określamy prawdopodobieństwo akceptacji i porównujemy je z liczbą wylosowaną z rozkładu jednostajnego.
+Jeśli liczba ta jest większa od wartości prawdopodobieństwa, wyszukiwanie odrzuca bieżące parametry i następna iteracja tworzy swoją wartość kandydata w sąsiedztwie poprzedniej wartości.
+W przeciwnym razie następna iteracja tworzy kolejny zestaw parametrów na podstawie bieżących (suboptymalnych) wartości.
+
+::: callout-caution
+Prawdopodobieństwa akceptacji symulowanego wyżarzania pozwalają na postępowanie w złym kierunku, przynajmniej na krótką metę, z potencjałem znalezienia znacznie lepszego regionu przestrzeni parametrów w dłuższej perspektywie.
+:::
+
+Mapa ciepła na @fig-sa1 pokazuje, jak prawdopodobieństwo akceptacji może się zmieniać w zależności od iteracji, wydajności i współczynnika określonego przez użytkownika.
+
+![Mapa ciepła prawdopodobieństwa akceptacji symulowanego wyżarzania dla różnych wartości współczynnika](images/Zrzut%20ekranu%202023-03-10%20o%2019.23.10.png){#fig-sa1 fig-align="center" width="600"}
+
+Użytkownik może dostosować współczynniki $c$, aby znaleźć profil prawdopodobieństwa, który odpowiada jego potrzebom.
+W `finetune::control_sim_anneal()`, domyślnym dla tego argumentu `cooling_coef` jest 0.02.
+Zmniejszenie tego współczynnika zachęci wyszukiwanie do bycia bardziej wyrozumiałym dla słabych wyników.
+
+Proces ten trwa przez określoną ilość iteracji, ale może zostać zatrzymany, jeśli w ciągu określonej liczby iteracji nie pojawią się globalnie najlepsze wyniki.
+Bardzo pomocne może być ustawienie progu restartu.
+Jeśli wystąpi ciąg niepowodzeń, funkcja ta powraca do ostatnich globalnie najlepszych ustawień parametrów i zaczyna od nowa.
+
+Najważniejszym szczegółem jest określenie sposobu perturbacji parametrów dostrajania z iteracji na iterację.
+W literaturze można znaleźć wiele metod na to.
+My stosujemy metodę podaną przez @bohachevsky1986 zwaną uogólnionym symulowanym wyżarzaniem.
+Dla ciągłych parametrów dostrajania definiujemy mały promień, aby określić lokalne "sąsiedztwo".
+Na przykład załóżmy, że są dwa parametry dostrajania i każdy z nich jest ograniczony przez zero i jeden.
+Proces symulowanego wyżarzania generuje losowe wartości na otaczającym promieniu i losowo wybiera jedną z nich jako aktualną wartość kandydacką.
+
+Wielkość promienia kontroluje, jak szybko wyszukiwanie bada przestrzeń parametrów.
+Im większy jest promień tym szybciej przestrzeń parametrów będzie przeszukiwana przez algorytm ale jednocześnie mniej dokładnie.
+
+Dla zilustrowania użyjemy dwóch głównych parametrów dostrajania `glmnet`:
+
+-   Wielkość kary (`penalty`). Domyślny zakres tego parametru to od $10^{-10}$ do $10^0$. Najczęściej jest podawany w skali logarytmicznej o podstawie 10.
+-   Proporcja kary lasso (`mixture`) - wartość pomiędzy 0 i 1 określająca balans pomiędzy karą L1 i L2.
+
+Proces rozpoczyna się od wartości początkowych `penalty` = 0,025 i `mixture` = 0,050.
+Używając promienia, który losowo waha się między 0,050 a 0,015, dane są odpowiednio skalowane, losowe wartości są generowane na promieniach wokół punktu początkowego, a następnie jedna jest losowo wybierana jako kandydat.
+Dla ilustracji przyjmiemy, że wszystkie wartości kandydujące faktycznie poprawiają wydajność modelu.
+Korzystając z nowej wartości, generowany jest zestaw nowych losowych sąsiadów, wybierany jest jeden, i tak dalej.
+@fig-sa2 przedstawia sześć iteracji sukcesywnie podążających do lewego górnego rogu.
+
+![Kilka iteracji procesu symulowanego wyżarzania](images/Zrzut%20ekranu%202023-03-10%20o%2019.46.04.png){#fig-sa2 fig-align="center" width="600"}
+
+Zauważmy, że podczas niektórych iteracji zestawy kandydatów wzdłuż promienia wykluczają punkty poza granicami parametrów.
+Ponadto, nasza implementacja przesuwa wybór kolejnych konfiguracji dostrajania parametrów od nowych wartości, które są bardzo podobne do poprzednich konfiguracji.
+
+Dla parametrów kategorycznych i całkowitych, każdy z nich jest generowany z określonym wcześniej prawdopodobieństwem.
+Argument `flip` w `control_sim_anneal()` może być użyty do określenia tego prawdopodobieństwa.
+Dla parametrów całkowitoliczbowych, używana jest najbliższa wartość całkowita.
+
+Przeszukiwanie metodą symulowanego wyżarzania może nie być optymalna w przypadku, gdy wiele parametrów jest nienumerycznych lub całkowitoliczbowych o niewielu unikalnych wartościach.
+W tych przypadkach jest prawdopodobne, że ten sam zestaw kandydatów może być testowany więcej niż raz.
+
+Aby zaimplementować wyszukiwanie iteracyjne poprzez symulowane wyżarzanie, użyj funkcji `tune_sim_anneal()`.
+Składnia tej funkcji jest niemal identyczna jak `tune_bayes()`.
+Nie ma żadnych opcji dotyczących funkcji akwizycji czy próbkowania niepewności.
+Funkcja `control_sim_anneal()` posiada pewne szczegóły, które definiują lokalne sąsiedztwo i harmonogram chłodzenia:
+
+-   `no_improve` jest liczbą całkowitą, która zatrzyma wyszukiwanie, jeśli w ciągu iteracji określonym przez `no_improve` nie zostaną odkryte globalnie najlepsze wyniki. Przyjęte suboptymalne lub odrzucone parametry liczą się jako "brak poprawy".
+-   `restart` to liczba iteracji, która musi minąć bez poprawy jakości modelu, po której następuje przejście do najlepszego poprzednio ustalonego zestawu parametrów.
+-   `radius` to wektor liczbowy w przedziale (0, 1), który określa minimalny i maksymalny promień lokalnego sąsiedztwa wokół punktu początkowego.
+-   `flip` to wartość prawdopodobieństwa określająca szanse zmiany wartości parametrów kategorycznych lub całkowitych.
+-   `cooling_coef` jest współczynnikiem $c$ w $\exp(c\times D_i \times i)$, który moduluje jak szybko prawdopodobieństwo akceptacji maleje w trakcie iteracji. Większe wartości `cooling_coef` zmniejszają prawdopodobieństwo akceptacji suboptymalnego ustawienia parametrów.
+
+Dla danych dotyczących segmentacji komórek składnia jest bardzo spójna z poprzednio stosowanymi funkcjami:
+
+```{r}
+#| eval: false
+ctrl_sa <- control_sim_anneal(verbose = TRUE, no_improve = 10L)
+
+set.seed(1404)
+svm_sa <-
+  svm_wflow %>%
+  tune_sim_anneal(
+    resamples = cell_folds,
+    metrics = roc_res,
+    initial = svm_initial,
+    param_info = svm_param,
+    iter = 50,
+    control = ctrl_sa
+  )
+```
+
+```{r}
+#| echo: false
+
+load("models/svm_sa.rda")
+```
+
+Dane wyjściowe dla poszczególnych iteracji:
+
+```{r}
+#| label: tbl-sa1
+#| tbl-cap: Podsumowanie symulowanego wyżarzania
+collect_metrics(svm_sa) |> 
+  gt()
+```
+
+```{r}
+#| label: tbl-sa2
+#| tbl-cap: Najlepsze kombinacje parametrów na podstawie SA
+
+show_best(svm_sa) |> 
+  gt()
+```
+
+Podobnie jak w przypadku innych funkcji `tune_*()`, odpowiadająca im funkcja `autoplot()` tworzy wizualną ocenę wyników.
+Użycie `autoplot(svm_sa, type = "performance")` pokazuje wydajność w czasie iteracji (@fig-sa3), podczas gdy `autoplot(svm_sa, type = "parameters")` przedstawia wydajność w zależności od konkretnych wartości dostrajania parametrów (@fig-sa4).
+
+```{r}
+#| label: fig-sa3
+#| fig-cap: Przebieg procesu symulowanego wyżarzania
+
+autoplot(svm_sa, type = "performance")
+```
+
+```{r}
+#| label: fig-sa4
+#| fig-cap: Wydajność modeli w kontekście hiperparametrów modelu
+
+autoplot(svm_sa, type = "parameters")
+```
+
+Wizualizacja ścieżki wyszukiwania pomaga zrozumieć, gdzie proces wyszukiwania poradził sobie dobrze, a gdzie pobłądził:
+
+![Wizualizacja przebiegu symulowanego wyżarzania](https://www.tmwr.org/sa_search.mp4){#fig-sa5 fig-align="center"}
