--- a/references.bib
+++ b/references.bib
@@ -506,3 +506,12 @@ pages={671–680} }
 	url = {http://dx.doi.org/10.1080/00401706.1986.10488128},
 	langid = {en}
 }
+
+@book{khun2013a,
+  title = {Applied {{Predictive Modeling}}},
+  author = {Khun, M. and Johnson, K.},
+  year = {2013},
+  publisher = {{Springer}},
+  address = {{New York}}
+}
+
